BitQuest to LBRYQuest

--- a/bin/plugin.yml
+++ b/bin/plugin.yml
@@ -1,8 +1,8 @@
-name: BitQuest
+name: LBRYQuest
 version: 1.1
-author: The BitQuest Open Source Project
-main: com.bitquest.bitquest.BitQuest
-description: The Minecraft server that runs on Bitcoin
+author: The LBRYQuest Open Source Project
+main: com.lbryquest.lbryquest.LBRYQuest
+description: The Minecraft server that runs on LBRY Credits
 commands:
   addtown:
     description: "Creates a new town in the standing location"
