--- a/bin/config.yml
+++ b/bin/config.yml
@@ -1,7 +1,7 @@
 superuser: null
 # commented until <walletAmount> gets a class getter
 #welcomeMessage:
-#   <bold><yellow>Welcome to BitQuest, the server that runs on Bitcoin! ^_^<reset>
+#   <bold><yellow>Welcome to LBRY Quest, the server that runs on LBRY Credits! ^_^<reset>
 #
 #   <green>Your bank balance is: <walletAmount>
 #   <green>To cash out or add funds, log into: <blue><underline><link>xapo.com</link>
