--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The server that runs on Bitcoin!
+title: The server that runs on LBRY Credits!
 email: bitquest@bitquest.co
 description: >
-  Bitquest is a Survival style Minecraft server with a Bitcoin-denominated economy: Players can buy, sell and trade items using BTC micropayments with a fully funcional Bitcoin wallet you can send money to/from.
+  LBRY Quest is a Survival style Minecraft server with a Bitcoin-denominated economy: Players can buy, sell and trade items using LBC micropayments with a fully funcional LBRY Credits wallet you can send money to/from.
   To start playing, Connect to the following address using the PC Version of Minecraft:
   play.bitquest.co
 baseurl: "" # the subpath of your site, e.g. /blog
