--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,8 +1,8 @@
-name: BitQuest
+name: LBRYQuest
 version: 2.0
-author: The BitQuest Dev Team
-main: com.bitquest.bitquest.BitQuest
-description: The BitQuest Open Source Project
+author: The LBRYQuest Dev Team
+main: com.lbryquest.lbryquest.LBRYQuest
+description: The LBRYQuest Open Source Project
 commands:
   ban:
     description: "Adds player to the ban list"
@@ -53,7 +53,7 @@ commands:
     description: "Allows moderators to spectate players' actions"
     usage: "/spectate <player>"
   transfer:
-    description: "Sends your BitQuest wallet balance to an external address of your own"
+    description: "Sends your LBRY Quest wallet balance to an external address of your own"
     usage: "/transfer <amount> <bitcoin address, e-mail or username>"
   unban:
     description: "Removes player from the ban list"
@@ -71,7 +71,7 @@ commands:
     description: "Get testnet coins (development mode only)"
     usage: "/faucet"
   wallet:
-    description: "Displays your BitQuest wallet info"
+    description: "Displays your LBRY Quest wallet info"
     usage: "/wallet"
   crashtest:
     description: "Crashes the plugin on purpose, hell breaks loose. Don't try this at home"
